Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35633

Aborts received by replica should not be ignored when matching prepare is missing

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 6.5.0
    • 6.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown
    • KV-Engine MH 2nd Beta

    Description

      If a replica receives an abort but did not receive the matching prepare due to deduplication, it currently does nothing (kv_engine/engines/ep/src/vbucket.cc:898).

      Consider a replica A which received only the abort, and a second replica B which has, so far, only received the prepare. If the active fails and A is promoted, it should be able to send the abort it received to the B. As we discarded the abort on A, replica B will have a prepare but might never receive an associated abort.

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-35633
          # Subject Branch Project Status CR V

          Activity

            People

              james.harrison James Harrison (Inactive)
              james.harrison James Harrison (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty